[workspace]
members = [
  "crates/interfaces/*",
  "crates/integration/test-bdd",
  "crates/misc/*",
  "crates/components/*",
  "crates/bins/*",
  "crates/wick/*",
  "tests/*"
]
exclude = [
  "crates/integration/test-baseline-component",
  "crates/integration/test-cli-trigger-component",
  "crates/integration/test-cli-with-db",
  "crates/integration/test-http-trigger-component",
  "tests/template",
  "tests/testdata",
  "examples/http/middleware/request",
  "examples/http/wasm-http-call/wasm-component",
  "examples/cli/cli-maker",
]

[workspace.dependencies]
#
# crates/wick
#
flow-component = { path = "./crates/wick/flow-component", version = "0.5.0", default-features = false }
flow-expression-parser = { path = "./crates/wick/flow-expression-parser", version = "0.5.0" }
flow-graph = { path = "./crates/wick/flow-graph", version = "0.21.0" }
flow-graph-interpreter = { path = "./crates/wick/flow-graph-interpreter", version = "0.20.0" }
wick-logger = { path = "./crates/wick/wick-logger", version = "0.2.0" }
wick-asset-reference = { path = "./crates/wick/wick-asset-reference", version = "0.3.0" }
wick-component = { path = "./crates/wick/wick-component", version = "0.15.0", default-features = false }
wick-component-cli = { path = "./crates/wick/wick-component-cli", version = "0.1.0", default-features = false }
wick-component-codegen = { path = "./crates/wick/wick-component-codegen", version = "0.4.0" }
wick-component-wasm = { path = "./crates/wick/wick-component-wasm", version = "0.2.0" }
wick-config = { path = "./crates/wick/wick-config", version = "0.26.0", default-features = false }
wick-host = { path = "./crates/wick/wick-host", version = "0.4.0" }
wick-interface-types = { path = "./crates/wick/wick-interface-types", version = "0.15.0" }
wick-invocation-server = { path = "./crates/wick/wick-invocation-server", version = "0.1.0" }
wick-oci-utils = { path = "./crates/wick/wick-oci-utils", version = "0.3.0", default-features = false }
wick-package = { path = "./crates/wick/wick-package", version = "0.2.0" }
wick-packet = { path = "./crates/wick/wick-packet", version = "0.15.0", default-features = false }
wick-settings = { path = "./crates/wick/wick-settings", version = "0.1.0" }
wick-rpc = { path = "./crates/wick/wick-rpc", version = "0.1.0", default-features = false }
wick-runtime = { path = "./crates/wick/wick-runtime", version = "0.22.0" }
wick-stdlib = { path = "./crates/wick/wick-stdlib", version = "0.1.0" }
wick-test = { path = "./crates/wick/wick-test", version = "0.1.0" }
wick-wascap = { path = "./crates/wick/wick-wascap", version = "0.1.0" }
wick-xdg = { path = "./crates/wick/wick-xdg", version = "0.2.0" }
#
# crates/misc
#
asset-container = { path = "./crates/misc/asset-container", version = "0.2.0" }
derive-asset-container = { path = "./crates/misc/derive-asset-container", version = "0.2.0" }
performance-mark = { path = "./crates/misc/performance-mark", version = "0.1.0" }
seeded-random = { path = "./crates/misc/seeded-random", version = "0.3.0", default-features = false }
tap-harness = { path = "./crates/misc/tap-harness", version = "0.1.0" }
test-logger = { path = "./crates/misc/test-logger", version = "0.1.0" }
#
# crates/interfaces
#
wick-interface-http = { path = "./crates/interfaces/wick-interface-http", version = "0.2.0" }
wick-interface-cli = { path = "./crates/interfaces/wick-interface-cli", version = "0.2.0" }
#
# crates/components
#
wick-sql = { path = "./crates/components/wick-sql", version = "0.1.0" }
wick-http-client = { path = "./crates/components/wick-http-client", version = "0.1.0" }
# wasmtime (must align with version in wasmrs)
wasmtime = { version = "7.0.0" }
wasmtime-wasi = { version = "7.0.0", features = ["sync"] }
wasi-common = { version = "7.0.0" }
# wasmrs
wasmrs = { version = "0.12.1" }
wasmrs-codec = { version = "0.12.1" }
wasmrs-frames = { version = "0.12.1" }
wasmrs-guest = { version = "0.12.1" }
wasmrs-host = { version = "0.12.1" }
wasmrs-runtime = { version = "0.12.1" }
wasmrs-rx = { version = "0.12.1" }
wasmrs-wasmtime = { version = "0.12.1" }
#
# Other
#
ansi_term = "0.12"
anyhow = "1.0"
assert-json-diff = "2.0"
async-recursion = "1.0"
async-stream = "0.3"
async-trait = "0.1"
atty = "0.2"
bytes = "1.4"
base64 = { version = "0.21", default-features = false }
base64-serde = "0.7.0"
bb8-tiberius = { version = "0.15.0" }
bb8 = "0.8.0"
bitflags = "2.2"
cfg-if = "1.0"
check_keyword = "0.2"
chrono = { version = "0.4", default-features = false }
console-subscriber = "0.1"
clap = "4.2"
console = "0.15"
cron = "0.12"
data-encoding = "2.3.2"
derive_builder = "0.12"
dialoguer = "0.10"
dyn-clone = "1.0"
env_logger = "0.10"
escargot = "0.5"
futures = "0.3"
getrandom = { version = "0.2", default-features = false }
getset = "0.1"
glob = "0.3"
heck = "0.4"
human-panic = "1.1"
http = "0.2"
hyper = "0.14"
hyper-staticfile = "0.9"
hyper-reverse-proxy = "0.5"
itertools = "0.10"
jaq-core = "0.10"
lazy_static = "1.4"
liquid = "0.26"
liquid-json = "0.5"
markup-converter = "0.2"
nkeys = "0.2"
nom = "7.1"
normpath = "1.1"
nuid = "0.4"
num-traits = "0.2"
oci-distribution = { version = "0.9", default-features = false }
once_cell = "1.8"
openapiv3 = "1.0"
openssl = "0.10"
option-utils = "0.1"
opentelemetry = { version = "0.18.0" }
opentelemetry-otlp = { version = "0.11.0" }
parking_lot = "0.12"
paste = "1.0"
pin-project-lite = "0.2"
postgres-openssl = "0.5"
pretty_assertions = "1.3"
proc-macro-crate = "1.1"
proc-macro2 = "~1.0.63"
property = "0.3"
prost = "0.11"
prost-types = "0.11"
quote = "1.0"
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
regex = "1.8"
reqwest = { version = "~0.11.16", default-features = false }
ring = "0.16"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.0"
serde_yaml = "0.9"
serde-value = "0.7"
serde-with-expand-env = "1.1"
sha256 = "1.1"
shellexpand = "3.0"
syn = "2.0"
sqlx = "0.6"
# sqlx = "0.7.0-alpha.2"
structmeta = "0.2"
structured-output = "0.1.1"
tar = "0.4"
flate2 = "1"
tracing-appender = "0.2"
test_bin = "0.4"
test-log = "0.2"
testanything = "0.4"
thiserror = "1.0"
tiberius = { version = "0.12", default-features = false }
time = "0.3"
tokio = "1"
tokio-postgres = "0.7"
tokio-stream = { version = "0.1", default-features = false }
tokio-util = "0.7"
tonic = "0.9"
tonic-build = { version = "0.9", default-features = false }
tonic-reflection = { version = "0.9", default-features = false }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = "0.3"
trycmd = "0.14"
url = "2.3"
uuid = { version = "1.1", default-features = false }
wasm-encoder = "0.29"
wasm-gen = "0.1"
wasmparser = "0.107"
wascap = "0.8"
walkdir = "2.3"
xdg = "2.4"
byteorder = "1.4"
rstest = "0.17"
