[package]
name = "vino-provider-collection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vino-provider = { path="../vino-provider" }
serde = { version="1.0.118", features=["derive"] }
vino-runtime = { path="../vino-runtime" }
