[package]
name = "vino-provider-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vino-runtime = { path="../vino-runtime" }
vino-guest = { path="../vino-guest" }
vino-provider = { path="../vino-provider" }
vino-rpc = { path="../vino-rpc" }
vino-macros = { path="../vino-macros" }
tokio = { version="1.4.0", features=["macros", "net", "rt-multi-thread"] }
serde = { version="1.0.118", features=["derive"] }
futures = "0.3.15"
async-trait = "0.1.50"
thiserror = "1.0.25"
rmp-serde = "0.15.5"
structopt = "*"
log = "*"
env_logger = "0.8.4"

[dev-dependencies]
test-env-log = "0.2.7"
vino-provider-test = { path="../vino-provider-test" }
