[package]
name = "vino-interfaces-collection"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vino-codec = { path = "../vino-codec" }
vino-rpc = { path = "../vino-rpc" }
serde = { version = "1.0.118", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.42"
maplit = "1.0.2"
tonic = "0.4.3"
vino-provider = { path = "../vino-provider" }
vino-component = { path = "../vino-component" }
test-env-log = "0.2.7"
tokio = { version = "1.4.0", features = ["macros"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
env_logger = "0.8.4"
