[package]
name = "logger"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
colored = "2.0.0"
log = "0.4.14"
tracing = "0.1.26"
env_logger = "0.9"
serde_json = "1.0.64"
structopt = "0.3.21"
thiserror = "1.0.26"
lazy_static = "1.4.0"
