[package]
name = "vino-authentication-inmemory"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

[[bin]]
name = "vino-authentication-inmemory"
path = "src/main.rs"

[dependencies]
vino-interface-authentication = { path = "../interfaces/interface-authentication" }
vino-provider = { path = "../../sdk/crates/vino-provider", features = [
  "native",
] }
vino-packet = { path = "../../sdk/crates/vino-packet" }
vino-rpc = { path = "../vino-rpc" }
vino-macros = { path = "../../sdk/crates/vino-macros" }
thiserror = "1.0.25"
log = "0.4"
async-trait = "0.1.50"
tokio-stream = "0.1"
tokio = { version = "1.4.0", features = ["rt-multi-thread"] }
bcrypt = "0.10.1"

#for bin
structopt = "0.3.22"
vino-provider-cli = { path = "../vino-provider-cli" }


[dev-dependencies]
vino-codec = { path = "../../sdk/crates/vino-codec" }
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
anyhow = "1.0.42"
tokio = { version = "1.4.0", features = ["macros"] }
test-interface-authentication = { path = "../integration/test-interface-authentication" }
rand = "0.8.4"
