[package]
name = "vino-collection-fs"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

[[bin]]
name = "vino-collection-fs"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.25"
vino-provider = { path = "../vino-provider", features = ["native"] }
vino-provider-cli = { path = "../vino-provider-cli" }
vino-packet = { path = "../vino-packet" }
vino-rpc = { path = "../vino-rpc" }
vino-macros = { path = "../vino-macros" }
vino-interface-collection = { path = "../interfaces/interface-collection" }
serde = { version = "1.0.118", features = ["derive"] }
async-trait = "0.1.50"
futures = "0.3.15"
tokio = { version = "1.4.0", features = ["macros", "sync", "rt-multi-thread"] }
env_logger = "0.9"
tokio-util = { version = "0.6.7", features = ["codec"] }
structopt = "0.3.21"
log = "0.4"

[dev-dependencies]
test-env-log = "0.2.7"
env_logger = "0.9"
serde_json = "1.0.64"
backtrace = "0.3.60"
test_bin = "0.3.0"
tonic = "0.5.0"
anyhow = "1.0.42"
test-interface-collection = { path = "../integration/test-interface-collection" }
